# bt2-ftrace-to-ctf

./: .clang-format  .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml
LICENSES/: MIT.txt
man/: ftrace-to-ctf.1.in  meson.build
src/: bt-ftrace-logging.h  bt-ftrace-lttng-events.c  bt-ftrace-lttng-events.h  bt-ftrace-plugin.c  bt-ftrace-source-query.c  bt-ftrace-source-query.h  bt-ftrace-source.c  bt-ftrace-source.h  bt-ftrace-tracemeta.c  bt-ftrace-tracemeta.h  config.h.in  ftrace-to-ctf.c  trace-cmd-private.h
